--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,13 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   http: ^0.12.2
   circular_countdown_timer: ^0.0.7
+  flutter_icons: ^1.1.0
+  html_unescape: ^1.0.2
+  firebase_auth: ^0.18.4
+  google_sign_in: ^4.5.6
+  cloud_firestore: ^0.14.4
+  rxdart: ^0.24.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -53,7 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
-  #   - images/a_dot_ham.jpeg
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
